--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,17 +1,37 @@
 <div>
   <h4>Caps Store</h4>
-  <table>
+  <table class="table table-striped">
     <thead>
       <th width="60%">Caps</th>
       <th width="20%">Qty</th>
       <th width="20%">Price</th>
     </thead>
     <tbody>
-      <tr>
-        <td><span></span></td>
-        <td><input/></td>
-        <td><input/></td>
+      <tr ng-repeat="product in productsList |
+  storefilter: currentPage*itemsPerPage |
+  limitTo: itemsPerPage">
+        <td><span>{{product.name}}</span></td>
+        <td><input type="number" ng-model="product.quantity" is-blured="test(product.id)"/></td>
+        <td><input type="number" ng-model="product.price"/></td>
       </tr>
     </tbody>
+    <tfoot>
+      <td colspan="3">
+        <div class="pagination">
+          <ul>
+            <li ng-class="prevPageDisabled()">
+              <a href ng-click="prevPage()">« Prev</a>
+            </li>
+            <li ng-repeat="n in range()"
+              ng-class="{active: n == currentPage}" ng-click="setPage(n)">
+              <a href="">{{n+1}}</a>
+            </li>
+            <li ng-class="nextPageDisabled()">
+              <a href ng-click="nextPage()">Next »</a>
+            </li>
+          </ul>
+        </div>
+      </td>
+    </tfoot>
   </table>
 </div>
