--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,37 +1,43 @@
 <div>
-  <h4>Caps Store</h4>
-  <table class="table table-striped">
-    <thead>
-      <th width="60%">Caps</th>
-      <th width="20%">Qty</th>
-      <th width="20%">Price</th>
-    </thead>
-    <tbody>
-      <tr ng-repeat="product in productsList |
-  storefilter: currentPage*itemsPerPage |
-  limitTo: itemsPerPage">
-        <td><span>{{product.name}}</span></td>
-        <td><input type="number" ng-model="product.quantity" is-blured="test(product.id)"/></td>
-        <td><input type="number" ng-model="product.price"/></td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <td colspan="3">
-        <div class="pagination">
-          <ul>
-            <li ng-class="prevPageDisabled()">
-              <a href ng-click="prevPage()">« Prev</a>
-            </li>
-            <li ng-repeat="n in range()"
-              ng-class="{active: n == currentPage}" ng-click="setPage(n)">
-              <a href="">{{n+1}}</a>
-            </li>
-            <li ng-class="nextPageDisabled()">
-              <a href ng-click="nextPage()">Next »</a>
-            </li>
-          </ul>
+  <h2>Caps Store</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="col-sm-6"><strong>Caps</strong></div>
+      <div class="col-sm-3"><strong>Qty</strong></div>
+      <div class="col-sm-3"><strong>Price</strong></div>
+    </div>
+    <br/><br/>
+    <div class="col-md-12" ng-repeat="product in productsList | storefilter: currentPage*itemsPerPage | limitTo: itemsPerPage">
+      <div class="col-sm-6">{{product.name}}</div>
+      <div class="col-sm-3">
+        <input type="text" class="form-control" ng-model="product.quantity" is-blured="updateData(product.id,product.quantity,'quantity')" placeholder="Quantity" input-enabled readonly/>
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <span class="input-group-addon">$</span>
+          <input type="text" class="form-control" placeholder="Price" ng-model="product.price" is-blured="updateData(product.id,product.price,'price')" input-enabled readonly/>
         </div>
-      </td>
-    </tfoot>
+      </div> 
+      <br/><br/>
+    </div>
+  </div>
+  <tfoot>
+    <td colspan="3">
+      <div class="text-center">
+        <ul class="pagination">
+          <li ng-class="prevPageDisabled()">
+            <a href ng-click="prevPage()">« Prev</a>
+          </li>
+          <li ng-repeat="n in range()"
+            ng-class="{active: n == currentPage}" ng-click="setPage(n)">
+            <a href="">{{n+1}}</a>
+          </li>
+          <li ng-class="nextPageDisabled()">
+            <a href ng-click="nextPage()">Next »</a>
+          </li>
+        </ul>
+      </div>
+    </td>
+  </tfoot>
   </table>
 </div>
